--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "ky": "^0.28.5",
+    "ky-universal": "^0.9.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
