--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-query": "^3.16.0"
   },
   "devDependencies": {
     "@types/react": "17.0.9",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
     "typescript": "4.3.2"
   }
 }
