--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
-    "react-query": "^3.16.0"
+    "swr": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.9",
