--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
+    "stripe": "^8.191.0",
     "swr": "^1.1.0"
   },
   "devDependencies": {
