--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "17.0.9",
     "eslint": "^7.30.0",
     "eslint-config-next": "^11.0.1",
+    "prettier": "2.5.0",
     "typescript": "4.3.2"
   }
 }
